@@ -1,5 +1,10 @@
+        * Andreas J. Koenig <andreas.koenig.gmwojprw@franz.ak.mind.de>:
+	  The following bugfix guards against externally influenced $/. In
+	  our case, somebody (not @danga :) had set $/ to undef and so the
+	  application was hanging forever.
+
 1.01 - Jan 10, 2005
 
         * fix CPU spinning bug in _getline where we didn't handle
-          sysread() returning 0.  (Brad)
+	  sysread() returning 0.  (Brad)
 
